# human_motion_isaacsim

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/: a_person_is_jumping.motion  a_person_is_reaching_out_his_left_hand_and_walking.motion
docs/superpowers/plans/: 2026-03-18-custom-isaacsim-scene.md  2026-03-19-render-motion-video-wrapper.md  (+2 more)
env/: README.md  install.sh
plans/: 2026-03-18-hymotion-isaacsim-controller.md
scripts/: run_custom_scene.py  run_custom_scene.sh  run_scene.py  run_scene.sh  scene_utils.py  smoke_motion.py  smoke_run_motion.py  test_isaacsim_monitor.py
specs/: 2026-03-18-hymotion-isaacsim-controller-design.md
src/human_motion_isaacsim/: __init__.py  _api.py  _registry.py  _state.py  binding.py  checkpoint.py  custom_scene.py  gcs.py  isaacsim_simulator.py  motion_file.py  motion_os_inputs.py  motion_runner.py  protomotions_path.py  protomotions_runtime.py  recording.py  registry.json  result.py  runtime.py  simulator_adapter.py  viewport_capture.py
src/hymotion_isaacsim/: __init__.py  binding.py  checkpoint.py  custom_scene.py  isaacsim_simulator.py  motion_file.py  protomotions_path.py  protomotions_runtime.py  rest_pose.py  result.py  runtime.py
tests/: test_api.py  test_binding.py  test_custom_scene.py  test_isaacsim_simulator.py  test_motion_file.py  test_motion_os_inputs.py  test_motion_runner.py  test_motion_runtime_inputs.py  test_motion_scripts_inputs.py  test_recording.py  test_registry.py  test_render_motion_video_script.py  test_rest_pose.py  test_result.py  test_run_custom_scene.py  test_runtime_guards.py
(+4 files in other folders)
