[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "human-motion-isaacsim"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src", "third_party/ProtoMotions"]
testpaths = ["tests"]
